<resources>
    <string name="app_name">AngryPomodoro</string>

    <!-- Controls -->
    <string name="lblPomodoroLength">Interval length (min.):</string>
    <string name="txtPomodoroLength">25</string>
    <string name="lblShortBreakLength">Short break length (min.):</string>
    <string name="txtShortBreakLength">5</string>
    <string name="lblLongBreakLength">Long break length (min.):</string>
    <string name="txtLongBreakLength">15</string>
    <string name="lblIntervalsUntilLongBreak">Intervals until break:</string>
    <string name="txtIntervalsUntilLongBreak">4</string>
    <string name="lblIntervalsToDo">Intervals to do:</string>
    <string name="txtIntervalsToDo">8</string>
    <string name="chkRestrictAppUsage">Restrict App usage</string>

</resources>
